<resources>
    <string name="app_name">LoginFacebook</string>
    <string name="facebook_app_id">219480032153071</string>
    <string name="fb_login_protocol_scheme">fb219480032153071</string>
    <string name="search_hind">type somthing..</string>
    <string name="sort_message">Select field to order by</string>
    <string name="sort_nameField">Product Name</string>
    <string name="sort_priceField">Product Price</string>
    <string name="filter_message">Select values to show</string>
    <string name="filter_shoes">shoes</string>
    <string name="filter_towels">towels</string>
    <string name="filter_bags">bags</string>
    <string name="filter_blue">blue</string>
    <string name="filter_white">white</string>
    <string name="filter_red">red</string>
    <string name="filter_category">Category</string>
    <string name="filter_color">Color</string>
    <string name="myItems">My Items</string>
    <string name="addReview_send">Add</string>
    <string name="addReview_title">type your review here</string>
    <string name="add_review">Add Review</string>
    <string name="purchase_now">purchase now!</string>
    <string name="userDataRequest">For know you better, please fill the following</string>
    <string name="default_birthday">01/01/1990</string>
    <string name="birthday">Birthday:</string>
    <string name="btnSetBirthday">Set</string>
    <string name="moreDetails_Send">Continue</string>
    <string name="dateFormat">%1$d/%2$d/%3$d</string>
    <string name="and_you_interested_in">and you interested in:</string>
</resources>
