<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/userProfileActivityBackground"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_message"
        android:layout_marginHorizontal="3dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/White"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_category"
                android:layout_gravity="center"/>
            <CheckBox
                android:id="@+id/checkbox_shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_shoes"/>
            <CheckBox
                android:id="@+id/checkbox_towels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_towels"/>
            <CheckBox
                android:id="@+id/checkbox_bags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_bags"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_color"
                android:layout_gravity="center"/>
            <CheckBox
                android:id="@+id/checkbox_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_red"/>
            <CheckBox
                android:id="@+id/checkbox_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_white"/>
            <CheckBox
                android:id="@+id/checkbox_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_blue"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/filterDialog_btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Done"
        android:layout_margin="7dp"/>
</LinearLayout>
