<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context="com.example.noytse.loginfacebook.user_details_form">
    <ImageView
        android:id="@+id/imgUserDetail_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/lblTitle"
        android:layout_below="@id/imgUserDetail_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userDataRequest"
        android:gravity="center"
        android:layout_marginVertical="10dp"/>
        <LinearLayout
            android:id="@+id/containerGender"
            android:layout_below="@id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <Switch
                android:id="@+id/switchGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:checked="false"
                tools:checked="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>
        </LinearLayout>

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerGender"
        android:layout_marginVertical="10dp" />
    <LinearLayout
        android:id="@+id/containerBirthday"
        android:layout_below="@id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"/>
        <TextView
            android:id="@+id/lblSelectedBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_birthday"
            android:layout_marginHorizontal="10dp"/>
        <Button
            android:id="@+id/btnSetBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSetBirthday"
            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>
    <View
        android:layout_below="@id/containerBirthday"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>
    <View
        android:layout_below="@id/containerBirthday"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/colorPrimary"/>
    <View
        android:layout_below="@id/containerBirthday"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="80dp"
        android:background="@color/colorPrimary"/>
    <Button
        android:id="@+id/btnUserDetailContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreDetails_Send"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/containerBirthday"
        android:layout_marginTop="70dp"/>
</RelativeLayout>
